syntax = "proto3";

package example;

// Java/Kotlin용 옵션(예시)
option java_package = "com.example.protos";
option java_multiple_files = true;

// 로그인 요청
message LoginRequest {
  string username = 1;
  string password = 2;
}

// 로그인 응답
message LoginResponse {
  string userId = 1;  // 로그인 성공 시 사용자 ID
  bool success = 2;   // 성공 여부
  string message = 3; // 로그인 실패 시 에러 메시지 등
}
